2007-01-11  Darin Adler  <darin@apple.com>

        Reviewed by Hyatt.

        - moved code from a couple WebCore bridging classes here instead

        * Misc/WebNSPasteboardExtras.mm:
        (-[NSPasteboard _web_writeImage:element:URL:title:archive:types:]):
        Use MimeTypeRegistry instead of WebMimeTypeRegistryBridge.

        * WebView/WebHTMLRepresentation.mm:
        (stringArray): Added. Helper to convert a HashSet to an NSArray.
        (concatenateArrays): Added. Helper to concatenate two NSArray objects.
        (+[WebHTMLRepresentation supportedMIMETypes]): Use MimeTypeRegistry instead of
        WebMimeTypeRegistryBridge. Also fix a potential GC problem by using a RetainPtr
        instead of a [retain] on a global variable.
        (+[WebHTMLRepresentation supportedNonImageMIMETypes]): Ditto.
        (+[WebHTMLRepresentation supportedImageMIMETypes]): Ditto.

        * WebView/WebHTMLView.mm:
        (-[WebHTMLView _imageExistsAtPaths:]): Use MimeTypeRegistry instead of
        WebMimeTypeRegistryBridge.
        (-[WebHTMLView _documentFragmentWithPaths:]): Ditto.

        * WebView/WebView.mm: (+[WebView _decodeData:]): Moved code here from
        the old WebCoreEncodings class.

        * WebKit.xcodeproj/project.pbxproj: Let Xcode have its way with this file.
        Moved WebRenderNode into the appropriate group.

2007-01-10  Mitz Pettel  <mitz@webkit.org>

        Reviewed by Darin.

        - fix http://bugs.webkit.org/show_bug.cgi?id=11775
          'Show URLs in Tool Tips' preference is ignored

        * WebView/WebHTMLView.mm:
        (-[WebHTMLView _resetCachedWebPreferences:]):
        (-[WebHTMLView setDataSource:]): Added a call to _resetCachedWebPreferences:.
        Added an assertion that the view is not closed, instead of reopening it.
        Reopening should not occur, now that <http://bugs.webkit.org/show_bug.cgi?id=12087>
        is fixed.

2007-01-10  Beth Dakin  <bdakin@apple.com>

        Reviewed by John.
